# Game-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ToDo.md
cmake/: PotatoEngine.cmake  Setup.cmake
import/PotatoEngine/: PotatoEngine.cppm
import/PotatoEngine/Core/: Core.cppm  Using.cppm
import/PotatoEngine/Core/Classes/: Classes.cppm  Component.cppm  Get_Manager.cppm  Manager.cppm  Object.cppm  SafePtr.cppm
import/PotatoEngine/Core/Debug/: Debug.cppm
import/PotatoEngine/Core/Event/: Event.cppm
import/PotatoEngine/Core/Exception/: Exception.cppm  InvalidPointer.cppm  NoComponentFound.cppm  NoFileFound.cppm  NoObjectFound.cppm  No_Component_Found.cppm  No_File_Found.cppm  No_Object_Found.cppm
import/PotatoEngine/Core/Time/: Time.cppm  TimeKeeper.cppm  TimeVariables.cppm
import/PotatoEngine/Physics/: Physics.cppm
import/PotatoEngine/Physics/Exception/: Exception.cppm  Non_Invertible_Matrix.cppm
import/PotatoEngine/Physics/Structs/: Structs.cppm
import/PotatoEngine/Physics/Structs/Matrix/: Matrix.cppm  Matrix3x3.cppm
import/PotatoEngine/Physics/Structs/Quaternion/: Quaternion.cppm
import/PotatoEngine/Physics/Structs/Vector/: Vector.cppm  Vector2.cppm  Vector3.cppm
src/: Event_Broadcaster.cppm  Event_Reciever.cppm  Initialize.cppm  PotatoEngine.cpp  Stop_After_Time.cppm
